--- a/_posts/0000-01-02-MadMedDz.md
+++ b/_posts/0000-01-02-MadMedDz.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+> Take your time and do thinks well! -MadMedDz
 Use the left arrow to go back!
